fix spacing for blog-list

--- a/src/pages/blog.css
+++ b/src/pages/blog.css
@@ -19,16 +19,12 @@
 }
 
 .blog-item {
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
 }
 
 @media only screen and (min-device-width: 900px) {
     .blog-list {
         width: 500px;
         margin: 1rem auto;
-    }
-
-    .blog-item {
-        margin-bottom: 2rem;
     }
 }
